[gd_scene load_steps=16 format=2]

[ext_resource path="res://framework/resources/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://framework/node_modules/audio_players/detachable_audio_player/DetachableAudioPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://framework/ui/menus/options_menu/OptionsMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://framework/ui/modules/menu_button/MenuButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://framework/ui/menus/pause_menu/pause_menu.gd" type="Script" id=5]
[ext_resource path="res://framework/ui/menus/pause_menu/pause_01.wav" type="AudioStream" id=6]
[ext_resource path="res://framework/ui/menus/pause_menu/unpause_01.wav" type="AudioStream" id=7]
[ext_resource path="res://framework/resources/fonts/m3x6/pixel_32.tres" type="FontFile" id=8]
[ext_resource path="res://framework/ui/modules/cursor/Cursor.tscn" type="PackedScene" id=9]
[ext_resource path="res://game/restart_game_01.wav" type="AudioStream" id=10]
[ext_resource path="res://game/restart_game_02.wav" type="AudioStream" id=11]
[ext_resource path="res://game/menu_impact_01.wav" type="AudioStream" id=12]
[ext_resource path="res://game/menu_impact_02.wav" type="AudioStream" id=13]
[ext_resource path="res://game/menu_impact_03.wav" type="AudioStream" id=14]
[ext_resource path="res://game/restart_game_03.wav" type="AudioStream" id=15]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource( 5 )
OptionsMenu = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
modulate = Color( 0.917647, 0.831373, 0.666667, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
offset_right = 320.0
offset_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.768627 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
offset_right = 320.0
offset_bottom = 240.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
offset_left = 118.0
offset_top = 80.0
offset_right = 202.0
offset_bottom = 160.0
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
offset_right = 84.0
offset_bottom = 12.0
theme_override_fonts/font = ExtResource( 8 )
text = "~ PAUSED ~"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
offset_left = 19.0
offset_top = 28.0
offset_right = 65.0
offset_bottom = 80.0
custom_minimum_size = Vector2( 46, 0 )
size_flags_horizontal = 4

[node name="ResumeButton" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
offset_right = 46.0
offset_bottom = 10.0
text = "RESUME"

[node name="AudioStreamPlayer" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/ResumeButton/PressedSound/RandomAudioPlayer" index="0"]
stream = null
volume_db = -80.0

[node name="AudioStreamPlayer2" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/ResumeButton/PressedSound/RandomAudioPlayer" index="1"]
stream = null
volume_db = -80.0

[node name="RestartButton" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
offset_top = 14.0
offset_right = 46.0
offset_bottom = 24.0
text = "RESTART"

[node name="AudioStreamPlayer" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/RestartButton/PressedSound/RandomAudioPlayer" index="0"]
stream = null

[node name="AudioStreamPlayer2" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/RestartButton/PressedSound/RandomAudioPlayer" index="1"]
stream = null

[node name="OptionsButton" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
offset_top = 28.0
offset_right = 46.0
offset_bottom = 38.0
text = "OPTIONS"

[node name="MainMenuButton" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
visible = false
offset_top = 42.0
offset_right = 46.0
offset_bottom = 52.0
text = "MAIN MENU"

[node name="QuitButton" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
offset_top = 42.0
offset_right = 46.0
offset_bottom = 52.0
text = "QUIT"

[node name="PauseSound" parent="." instance=ExtResource( 2 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="PauseSound/RandomAudioPlayer" index="0"]
stream = ExtResource( 6 )
volume_db = -24.0
bus = "Menu"

[node name="UnpauseSound" parent="." instance=ExtResource( 2 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="UnpauseSound/RandomAudioPlayer" index="0"]
stream = ExtResource( 7 )
volume_db = -24.0
bus = "Menu"

[node name="Cursor" parent="." instance=ExtResource( 9 )]

[node name="ImpactSound" parent="." instance=ExtResource( 2 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ImpactSound/RandomAudioPlayer" index="0"]
stream = ExtResource( 12 )
bus = "Menu"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="ImpactSound/RandomAudioPlayer" index="1"]
stream = ExtResource( 13 )
bus = "Menu"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="ImpactSound/RandomAudioPlayer" index="2"]
stream = ExtResource( 14 )
bus = "Menu"

[node name="RestartSound" parent="." instance=ExtResource( 2 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="RestartSound/RandomAudioPlayer" index="0"]
stream = ExtResource( 10 )
bus = "Menu"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="RestartSound/RandomAudioPlayer" index="1"]
stream = ExtResource( 11 )
bus = "Menu"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="RestartSound/RandomAudioPlayer" index="2"]
stream = ExtResource( 15 )
bus = "Menu"

[editable path="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/ResumeButton"]
[editable path="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/ResumeButton/PressedSound"]
[editable path="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/ResumeButton/PressedSound/RandomAudioPlayer"]
[editable path="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/ResumeButton/HoverSound"]
[editable path="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/ResumeButton/HoverSound/RandomAudioPlayer"]
[editable path="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/RestartButton"]
[editable path="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/RestartButton/PressedSound"]
[editable path="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/RestartButton/PressedSound/RandomAudioPlayer"]
[editable path="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/RestartButton/HoverSound"]
[editable path="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/RestartButton/HoverSound/RandomAudioPlayer"]
[editable path="PauseSound"]
[editable path="PauseSound/RandomAudioPlayer"]
[editable path="UnpauseSound"]
[editable path="UnpauseSound/RandomAudioPlayer"]
[editable path="ImpactSound"]
[editable path="ImpactSound/RandomAudioPlayer"]
[editable path="RestartSound"]
[editable path="RestartSound/RandomAudioPlayer"]
